# trgt

./: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json  README.md
crates/pipeplot/licenses/: LICENSE-THIRDPARTY.json
crates/pipeplot/src/: lib.rs  pipeplot.rs  svg.rs
docs/: bam_files.md  cli.md  deepdive.md  merge.md  puretarget.md  remote_files.md  repeat_files.md  trvz-plots.md  tutorial.md  validate.md  vcf_files.md
src/: cli.rs  commands.rs  main.rs
src/commands/: deepdive.rs  genotype.rs  merge.rs  plot.rs  validate.rs
src/hmm/: builder.rs  hmm_model.rs  purity.rs  spans.rs  utils.rs
src/merge/: field_descriptors.rs  field_registry.rs  genotype_types.rs  mod.rs  tpool.rs  vcf_processor.rs  vcf_reader.rs  vcf_writer.rs
src/merge/strategy/: exact.rs
src/trgt/: locus.rs  locus_group.rs  mod.rs
src/trgt/genotype/: consensus.rs  genotype_cluster.rs  genotype_flank.rs  genotype_size.rs  mod.rs  span_locater.rs
src/trgt/reads/: clip_bases.rs  clip_region.rs  mod.rs  read.rs  snp.rs  test_utils.rs
src/trgt/workflows/: locus_result.rs  mod.rs  tr.rs
src/trgt/writers/: write_bam.rs  write_vcf.rs
src/trvz/: align.rs  align_allele.rs  align_consensus.rs  align_reads.rs  allele_plot.rs  mod.rs  params.rs  scale.rs  waterfall_plot.rs
src/utils/: align.rs  bam_utils.rs  input.rs  input_source.rs  locus.rs  math.rs  mod.rs  read.rs  readers.rs  region.rs  test_util.rs
src/utils/readers/: bam.rs  catalog.rs  genome.rs  vcf.rs
